# my-eview

./: .gitignore  DECISIONS.md  README.md  claude-code-build-prompt.md  create_admin.py  docker-compose.yml  myeview-bacccul-report.html  myeview-holistic-plan-v2.md  research-education-cameroon-regulations.md  research_cameroon_cybersecurity_regulations.md  research_telecom_cameroon_regulations.md  setup.py  start.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_categories_and_vectors.py  0003_add_user_fields_and_admin.py  0004_add_zone_transfer_vector.py  0005_add_report_shares.py  0006_add_organizations_sector.py  0007_add_app_settings.py  0008_add_ai_result_to_scores.py
backend/app/: config.py  constants.py  database.py  main.py  reference_data.py  sector_config.py
backend/app/api/: admin.py  auth.py  dependencies.py  ops.py  owner.py  public.py  reports.py  share.py  verified.py
backend/app/collectors/: asset_discovery.py  base.py  dns_collector.py  dnsbl_collector.py  http_collector.py  portscan_collector.py  rdap_collector.py  threat_intel_collector.py  tls_collector.py  whois_collector.py
backend/app/models/: __init__.py  app_setting.py  asset.py  category.py  category_score.py  organization.py  ownership_verification.py  raw_evidence.py  report_share.py  scan_run.py  score.py  score_history.py  threat_feed_cache.py  tia_entry.py  user.py  vector.py  (+1 more)
backend/config/: scoring_rules_v1.yaml  tia_templates_v1.yaml
backend/scripts/: diag_scan.py
(+91 files in other folders)
