[project]
name = "myeview"
version = "0.1.0"
description = "MYEVIEW — Cameroon external digital-trust scoring platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "celery[redis]>=5.3",
  "redis>=5.0",
  "httpx[http2]>=0.27",
  "dnspython>=2.6",
  "cryptography>=42.0",
  "python-whois>=0.9",
  "ipwhois>=1.2",
  "beautifulsoup4>=4.12",
  "python-nmap>=0.7",
  "jinja2>=3.1",
  "weasyprint>=61.0",
  "pyyaml>=6.0",
  "certifi>=2024",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "factory-boy>=3.3",
  "faker>=24.0",
  "freezegun>=1.4",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
